@@ -1,3 +1,7 @@
+2002-01-16  Patrick Burke  <takhisisii@yahoo.com.au>
+	* shapes/monstinf.h: Added missing #include <cassert>.
+	* conf/*.cc: Fixed 'special character' (&amp; etc.) encoding/decoding.
+
 2002-01-15  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* mapedit/shapeedit.cc: Show 'equip' dialog.
